# library-eoas-utils

./: 1_download_dashboard.py  README.md  compute_lc_for_aviso.py  config.yml  download_examples.py  eoas.yml  pyproject.toml
download_data/: Copernicus_Datasets.py  Download_BioRun_CICESE_Nemo.py  Download_COPERNICUS.py  Download_EARTH_DATA.py  Download_ERDDAP.py  Download_GOES.py  Download_SSS_SMAP_satellite.py  Download_SWOT.py  Download_VIIRS.py  dashboard_cache.py  dashboard_loader.py  dashboard_products.py
io_utils/: coaps_io_data.py  dates_utils.py  io_common.py  io_netcdf.py
proc_utils/: comp_fields.py  geometries.py  gom.py  proj.py  units.py
test_data/Satellite_Data_Examples/SSS/SMAP_CoastWatch_Daily/: SSS_SMAP_CoastWatch_Daily_2026-05-05.nc
test_data/Satellite_Data_Examples/SST/GOES_ABI/: GOES_ABI_SST_2026-05-05_1200.nc
tests/: test_coaps_data.py  test_download_data.py  test_download_goes.py  test_vectorized.py
viz_utils/: constants.py  eoa_viz.py  eoas_viz_3d.py
